# EventCamProcessing

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  sdk_get_started.py
.github/workflows/: ci.yml
docs/: api.rst  conf.py  index.md  usage.md
figures/: figure_utils.py  filter_figures.ipynb  tracking_figures.ipynb
scripts/: example_run.py  filter_funcs.py  import_drivedata.py  particlefinder.py  particletracker.py
src/eventcamprocessing/: __init__.py  filter_funcs.py  particle_detection.py  particle_tracking.py
tests/: accumulate_test.py  conftest.py  particlefinder_tests.py  test_accumulate.py  test_filter_funcs.py  test_import_package.py  test_particlefinder.py  test_pipeline.py
