[project]
name = "eventcamprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Harrison-Oatman", email = "46121828+Harrison-Oatman@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "gdown>=5.2.0",
    "pydrive2>=1.21.3",
    "requests>=2.32.5",
]

[project.scripts]
eventcamprocessing = "eventcamprocessing:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
docs = [
    "furo>=2025.9.25",
    "myst-parser>=4.0.1",
    "sphinx-markdown-builder>=0.6.8",
    "sphynx>=0.0.3",
]
test = [
    "pytest>=8.4.2",
]

dev = [
    {include-group = "docs"},
    {include-group = "test"},
]
